# madga

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: blocks.md  index.md  mcp.md  publishers.md  saas.md  webhooks.md
docs/screenshots/: README.md
locale/en/LC_MESSAGES/: django.mo  (+1 more)
madga/: __init__.py  apps.py  context_processors.py  encryption.py  imageopt.py  security.py  signals.py  urls.py  webhooks.py
madga/api/: auth.py  router.py
madga/blocks/: builtin.py  fields.py  registry.py
madga/blog/: urls_root.py  views.py  views_broadcast.py  views_forms.py
madga/mcp/: __init__.py  auth.py  registry.py  server.py  tools.py  views.py
madga/migrations/: 0001_initial.py  0002_homepageblock_navitem.py  0005_remove_navitem_madga_navit_site_id_2715f3_idx_and_more.py  0006_userapikey.py  0007_alter_page_status_alter_post_status.py  0008_broadcastjob_subscriber.py  0009_mediafile_variants_alter_mediafile_file_type.py  0010_publisheraccount.py  0011_webhooks.py  0012_formsubmission.py  0013_alter_formsubmission_block_id.py  0014_byoa.py
madga/models/: __init__.py  api_keys.py  base.py  broadcast.py  byoa.py  channels.py  content.py  forms.py  homepage.py  media.py  navigation.py  site.py  users.py  webhooks.py
madga/publishers/: __init__.py  base.py  email.py  instagram.py  linkedin.py  social.py  twitter.py
madga/studio/: forms.py  middleware.py  mixins.py  urls.py
madga/templates/: 400.html  403.html  404.html  500.html
madga/templatetags/: madga_blocks.py  madga_studio_tags.py  madga_tags.py
madga/themes/: __init__.py  builtin.py  registry.py
miscoreblog/: apps.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
nitro/: __init__.py  exports.py  forms.py  mixins.py  serializers.py  tables.py  utils.py  views.py  viewsets.py  wizards.py
nitro/docs/: 01-views.md  02-models-mixins.md  03-forms-wizards.md  04-tables-filters.md  05-exports-seo-notifications.md  06-template-tags.md  07-components.md  08-javascript.md  09-utilities.md  README.md
nitro/templatetags/: nitro_tags.py
nitro/tests/: test_utils.py
nitro/utils/: __init__.py  currency.py  dates.py  templates.py
prototype/: app.js  prototype.html  styles.css
testproject/: prototype_views.py  settings.py  settings_pg.py  urls.py
tests/: conftest.py  test_api_headless.py  test_auto_broadcast.py  test_blocks_registry.py  test_broadcast.py  test_byoa.py  test_channels.py  test_forms.py  test_hardening.py  test_i18n.py  test_instagram.py  test_invitations.py  test_mcp.py  test_oauth_flows.py  test_page.py  test_post_lifecycle.py  test_public_signup.py  test_role_enforcement.py  test_webhooks.py
(+139 files in other folders)
