[project]
name = "madga"
version = "0.1.1"
description = "Make Django Great Again — headless-ready CMS as a Django app."
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6",
    "django-allauth[headless]>=65.16.1",
    "django-ninja>=1.3",
    "pillow>=10",
    "python-slugify>=8",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-django>=4.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "testproject.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
addopts = "-q --no-header"
